--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "A webpack starter for angular 2",
   "scripts": {
-    "start": "webpack-dev-server --inline --progress --port 8080",
+    "start": "node src/server/server.js",
+    "start-prod": "npm run build && NODE_ENV=production node src/server/server.js",
+    "start-webpack-dev": "webpack-dev-server --inline --progress --port 8080",
     "test": "karma start",
     "build": "rm -rf dist && webpack --config config/webpack.prod.js --progress --profile --bail",
     "postinstall": "typings install"
@@ -42,7 +44,7 @@
     "style-loader": "0.13.1",
     "ts-loader": "0.8.2",
     "typescript": "1.8.10",
-    "typings": "1.0.2",
+    "typings": "1.0.3",
     "webpack": "1.13.0",
     "webpack-dev-server": "1.14.1",
     "webpack-merge": "0.12.0"
