--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start-webpack-dev": "webpack-dev-server --inline --progress --port 8080",
     "test": "karma start",
     "build": "rm -rf dist && webpack --config config/webpack.prod.js --progress --profile --bail",
-    "postinstall": "typings install"
+    "postinstall": "typings install",
+    "lint": "tslint 'src/client/**/*.ts'"
   },
   "license": "MIT",
   "dependencies": {
@@ -25,6 +26,7 @@
     "zone.js": "0.6.12"
   },
   "devDependencies": {
+    "codelyzer": "0.0.19",
     "css-loader": "0.23.1",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
@@ -43,6 +45,7 @@
     "sass-loader": "3.2.0",
     "style-loader": "0.13.1",
     "ts-loader": "0.8.2",
+    "tslint": "3.10.2",
     "typescript": "1.8.10",
     "typings": "1.0.3",
     "webpack": "1.13.0",
